--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -13,11 +13,7 @@ jobs:
       with:
         minikube-version: 1.4.0
         k8s-version: 1.15.1
-    - name: Testing
-      run: |
-        minikube config set vm-driver kvm2
-        minikube config set kubernetes-version=v1.15.1
-        minikube start
-        minikube update-context
-        kubectl cluster-info
-        kubectl get pods -n kube-system
+    - name: Minikube start
+      run: minikube start
+    - name: Get pods
+      run: kubectl get pods
