--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -9,11 +9,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Setup Minikube
-      id: minikube
+    - name: Set up Minikube
       uses: CodingNagger/minikube-setup-action@v1.0.2
     - name: Launch Minikube
-      run: eval ${{ steps.minikube.outputs.launcher }}
+      run: minikube start --memory=8192 --cpus=4 --vm-driver=none --kubernetes-version v1.14.6 --extra-config kubeadm.ignore-preflight-errors=SystemVerification
+    - name: Set up pods
+      run: kubectl create -f export/
     - name: Wait for pods
       uses: CodingNagger/minikube-wait-action@v1.0.1
     - name: Check pods
