--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Launch Minikube
       run: sudo minikube start --memory=8192 --cpus=4 --vm-driver=none --kubernetes-version v1.14.6 --extra-config kubeadm.ignore-preflight-errors=SystemVerification
     - name: Set up pods
-      run: kubectl create -f export/
+      run: sudo kubectl create -f export/
     - name: Wait for pods
       uses: CodingNagger/minikube-wait-action@v1.0.1
     - name: Check pods
