--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -15,5 +15,10 @@ jobs:
       run: sudo minikube start --memory=8192 --cpus=4 --vm-driver=none --kubernetes-version v1.14.6 --extra-config kubeadm.ignore-preflight-errors=SystemVerification
     - name: Set up pods
       run: sudo kubectl create -f export/
+    - name: Wait for pods
+      uses: CodingNagger/minikube-wait-action@v1.0.1
+      with:
+        max-retry-attempts: 60
+        retry-delay: 60
     - name: Check pods
       run: sudo kubectl get pods
