Updated workflow and some scripts

--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -21,3 +21,7 @@ jobs:
         time: '3m'
     - name: Check pods
       run: sudo kubectl get pods
+    - name: Set up
+      run: ./setup.sh
+    # - name: Run tests
+    #   run: ./runAllTests.sh
