--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -32,8 +32,9 @@ jobs:
         architecture: 'x64'
     - name: Install Python packages
       run: pip install requests
+    - name: Set env variables
+      run: |
+        echo "::set-env name=USER_SERVICE_URL::$(sudo minikube service user --url)"
+        echo "::set-env name=ORDER_SERVICE_URL::$(sudo minikube service order --url)"
     - name: Load test
       run: python test/load_test.py ${USER_SERVICE_URL} ${ORDER_SERVICE_URL}
-      env:
-        USER_SERVICE_URL: $(sudo minikube service user --url)
-        ORDER_SERVICE_URL: $(sudo minikube service order --url)
