Fixed setup script

--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -15,8 +15,6 @@ jobs:
       run: sudo minikube start --memory=8192 --cpus=4 --vm-driver=none --kubernetes-version v1.14.6 --extra-config kubeadm.ignore-preflight-errors=SystemVerification
     - name: Set up pods
       run: sudo kubectl create -f export
-    - name: Scale order service
-      run: sudo kubectl scale deployment order --replicas=10
     - name: Wait for pods
       uses: jakejarvis/wait-action@master
       with:
@@ -25,6 +23,13 @@ jobs:
       run: sudo kubectl get pods --all-namespaces
     - name: Run tests
       run: sudo ./runAllTests.sh
+
+    - name: Scale order service
+      run: sudo kubectl scale deployment order --replicas=10
+    - name: Wait for replicas
+      uses: jakejarvis/wait-action@master
+      with:
+        time: '1m'
     - name: Set up
       run: sudo ./setup.sh
 
